add weixin login

--- a/src/pages/product/component/index.less
+++ b/src/pages/product/component/index.less
@@ -71,6 +71,11 @@
       &-gory {
         font-size: 22px !important;
       }
+      &-title {
+        font-size:24px;
+        font-weight:500;
+        color:rgba(102,102,102,1);
+      }
     }
 
     &-act {
@@ -171,6 +176,9 @@
     &-right {
 
       &-button {
+        &-pay {
+          width: 240px !important;
+        }
         width:344px;
         height:80px;
         background:rgba(42,134,252,1);
