* 新增 购物车 新增地址模块

--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -15,9 +15,10 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 180px;
+    height: 230px;
     width: 100%;
-    background-color: @theme-color;
+    .bg;
+    background-image: url(//net.huanmusic.com/scanbar-c/bg_order.png);
   }
   &-box {
     position: relative;
