--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -61,6 +61,17 @@ button {
   color: #999999 !important;
 }
 
+.at-input {
+  margin-left: 0px !important;
+}
+
+.at-input__title {
+  padding-left: 30px !important;
+  font-size:30px !important;
+  font-weight:500 !important;
+  color:rgba(51,51,51,1) !important;
+}
+
 .at-input__input {
   font-size: 30px !important;
 }
