* 新增下单逻辑

--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -24,6 +24,11 @@
     position: relative;
     z-index: 100;
   }
+  &-remark {
+    width: 690px;
+    .margin(30px, l);
+    .margin(20px, t);
+  }
   &-search {
     width: 610px !important;
   }
