--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -136,6 +136,11 @@
     color: @product-price-color;
     font-weight: bold;
     .margin(6px, r);
+    &-pre {
+      font-size:25px;
+      font-weight:500;
+      color:rgba(51,51,51,1);
+    }
     &-bge {
       font-size: @product-price-font;
       color: @product-price-color;
