--- a/src/component/order/order.less
+++ b/src/component/order/order.less
@@ -3,67 +3,157 @@
 
 @orderItemPrefix: component-order-item;
 
-@order-item-width: 690px;
-@order-item-icon: 50px;
 
 .@{orderItemPrefix} {
-  position: relative;
-  background-color: #ffffff;
-  width: @order-item-width;
-  .padding(30px, lr);
-  .padding(33px, tb);
-  .flex(center, space-between, row);
-  &::after {
-    .border1px;
-  }
-  &-left {
-    flex-direction: row;
-    display: flex;
-    flex: 1;
-    align-items: center;
-    &-icon {
-      width: @order-item-icon;
-      height: @order-item-icon;
-      .margin(14px, r);
-    }
-    &-detail {
-      flex-direction: column;
-      &-margin {
-        .margin(9px, t);
+  width: 100%;
+  height: 100%;
+  
+  &-card {
+    position: relative;
+    width: 690px;
+    height: 448px;
+    background-color: #fff;
+    margin-top: 30px;
+    border-radius: 10px;
+    padding-top: 34px;
+
+    &-status {
+      position: absolute;
+      right: 30px;
+      top: 30px;
+      color: #666666;
+      font-size: 30px;
+
+      &-red {
+        color: #FC4E44;
+      }
+
+      &-orange {
+        color: #FF893B;
+      }
+
+      &-blue {
+        color: #2A86FC;
       }
     }
-    &-text {
-      font-size: 24px;
-      color: #666666;
+
+    &-header {
+      display: flex;
+      flex-direction: row;
+      margin-left: 30px;
+      // margin-top: 64px;
+
+      &-icon {
+        width: 67px;
+        height: 67px;
+      }
+
+      &-text {
+        flex-direction: column;
+        margin-left: 10px;
+
+        &-shop {
+          color: #333333;
+          font-size: 30px;
+        }
+
+        &-time {
+          color: #999999;
+          font-size: 22px;
+        }
+      }
     }
-    &-img {
-      width: 60px;
-      height: 60px;
-      .margin(20px, r);
+
+    &-center {
+      display: flex;
+      flex-direction: row;
+      margin-top: 46px;
+      padding-left: 18px;
+      padding-bottom: 33px;
+      justify-content: space-between;
+      border-bottom: 1px solid #E3E3E3;
+
+      &-products {
+        display: flex;
+        flex-direction: row;
+      }
+
+      &-product {
+        width: 147px;
+        height: 170px;
+        margin-left: 15px;
+        flex-direction: column;
+
+        &-pic {
+          width: 147px;
+          height: 128px;
+        }
+
+        &-text {
+          color: #333333;
+          font-size: 18px;
+          width: 147px;
+          display: -webkit-box;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          line-clamp: 1;
+          -webkit-line-clamp: 1;
+          -webkit-box-orient: vertical;
+        }
+      }
+
+      &-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-right: 49px;
+        margin-top: 40px;
+
+        &-price {
+          color: #333333;
+          font-size: 24px;
+          font-weight: bold;
+        }
+
+        &-total {
+          color: #999999;
+          font-size: 22px;
+        }
+      }
+    }
+
+    &-button {
+      .flex(center, flex-end, row);
+
+      &-common {
+        width: 163px;
+        height: 52px;
+        .flex(center, center, column);
+        font-size: 26px; 
+        border-radius: 22.5px;
+        margin-top: 24px;
+        margin-right: 30px;
+      }
+
+      &-again {       
+        border: #999999 solid 2px;
+        color: #666666;
+      }
+
+      &-pay {
+        border: #2A86FC solid 2px;
+        color: #2A86FC;
+      }
     }
   }
-  &-right {
-    position: absolute;
-    right: 30px;
-    top: 50%;
-    transform: translateY(-50%);
-    .flex(center, center, column);
-    font-size: 30px;
-  }
-  &-no {
-    font-size: 30px;
-    line-height: 30px;
-    color: #333333;
-  }
-  &-time {
-    font-size: 26px;
-    line-height: 26px;
-    color: #999999;
-    .margin(17px, t);
-  }
+
   &-price {
-    font-size: 30px;
-    color: #4d4d4d;
+    color: #333333;
+    font-size: 24px;
     font-weight: bold;
+
+    &-integer {
+      font-size: 34px;
+    }
   }
 }
