Revert "我的模块修改"

--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -18,7 +18,6 @@
   display: flex;
   flex-direction: column;
   position: relative;
-
   &-header {
     z-index: @product-header-zindex;
     position: fixed;
@@ -28,7 +27,6 @@
     top: 0;
     left: 0;
     right: 0;
-
     &-button {
       color: @theme-color;
       background-color: #ffffff;
@@ -39,7 +37,6 @@
       position: relative;
       font-size: @normal-text-fontsize;
     }
-
     &-suspension {
       position: absolute;
       right: 10px;
@@ -52,55 +49,45 @@
       color: #ffffff;
       top: -18px;
     }
-
     &-search {
-      width: @product-search-width  !important;
+      width: @product-search-width !important;
     }
-
     &-item {
       .flex(center, center, column);
-
       &-icon {
         width: 34px;
         height: 34px;
-
         &-select {
           .margin(2px, t);
           width: 40px;
           height: 26px;
         }
       }
-
       &-text {
         font-size: 24px;
         color: #ffffff;
-
         &-select {
           .margin(6px, t);
         }
       }
     }
   }
-
   &-suspension {
     display: flex;
     flex-direction: column;
     align-items: center;
     .padding(247px, t);
-
     &-image {
       width: 323px;
       height: 213px;
       .margin(41px, b);
     }
-
     &-text {
       font-size: 34px;
       font-weight: bold;
       color: #9a9fb4;
     }
   }
-
   &-list {
     &-container {
       position: absolute;
@@ -109,15 +96,12 @@
       width: 100%;
       display: flex;
       flex-direction: row;
-
       &-suspension {
         top: 0px;
       }
-
       &-inventory {
-        top: @product-header-height + 80px;
+        top: @product-header-height + 80px; 
       }
-
       &-costom {
         position: absolute;
         top: 140px;
@@ -127,27 +111,22 @@
         flex-direction: row;
       }
     }
-
     &-left {
       width: 150px;
       display: flex;
       flex-direction: column;
       background-color: @product-list-left-bg-color;
-
       &-item {
         .flex(center, center, row);
         position: relative;
         height: @product-list-type-height;
         color: @base-font-color;
         font-size: @normal-text-fontsize;
-
         &-suspension {
           flex-direction: column;
         }
-
         &-active {
           background-color: #ffffff;
-
           &-bge {
             position: absolute;
             height: @product-list-type-height;
@@ -160,51 +139,43 @@
         }
       }
     }
-
     &-right {
       position: relative;
       display: flex;
       flex-direction: column;
       flex: 1;
-
       &-container {
         position: absolute;
         top: 70px;
         bottom: 0px;
-
         &-search {
           position: absolute;
           top: 0px;
           bottom: 0px;
         }
-
         &-inventory {
           top: 0 !important;
         }
       }
-
       &-header {
         border-bottom: 1px solid #f9f9f9;
         .padding(20px);
         display: flex;
         flex-direction: row;
         align-items: center;
-
         &-bge {
           background-color: @theme-color;
           width: 6px;
           height: 28px;
           .margin(10px, r);
         }
-
         &-text {
           font-size: @product-list-type-header-font;
           color: @base-font-color;
-          font-weight: bold;
+          font-weight: bold;         
         }
       }
     }
-
     &-bottom {
       width: 100%;
       .flex(center, center, row);
@@ -213,20 +184,17 @@
       color: #b2b2b2;
       .margin(44px, t);
     }
-
     &-section {
       background-color: @product-section-color;
       .padding(16px, tb);
       .padding(25px, lr);
       .flex(center, flex-start, row);
-
       &-icon {
         height: 28px;
         width: 6px;
         background-color: @theme-color;
         .margin(12px, r);
       }
-
       &-title {
         font-size: 32px;
         color: @base-font-color;
@@ -234,7 +202,6 @@
       }
     }
   }
-
   &-select {
     &-header {
       position: relative;
@@ -245,37 +212,31 @@
       .padding(40px, t);
       .margin(20px, b);
       .flex(center, center, row);
-
       &-close {
         position: absolute;
         left: 56px;
         top: 44px;
         width: 24px;
         height: 24px;
-
         &-image {
           width: 100%;
           height: 100%;
         }
       }
     }
-
     &-mask {
       display: flex;
       flex: 1;
     }
-
     &-content {
       display: flex;
       flex-direction: column;
       width: 100%;
       .padding(34px, lr);
       .padding(135px + 20px, b);
-
       &-nonfooter {
         .padding(0, b) !important;
       }
-
       &-button {
         .margin(0px, l) !important;
         .margin(18px, r) !important;
@@ -283,24 +244,20 @@
         .padding(18px, tb) !important;
         .padding(40px, lr) !important;
       }
-
       &-item {
         display: flex;
         flex-direction: column;
         .padding(25px, tb);
-
         &-title {
           font-size: @product-select-title-font;
           color: #4d4d4d;
           font-weight: bold;
         }
-
         &-buttons {
           display: flex;
           flex-direction: row;
           flex-wrap: wrap;
         }
-
         &-pos {
           position: fixed;
           bottom: 0;
@@ -313,11 +270,9 @@
         }
       }
     }
-
     &-border {
       border-bottom: 1px solid #e3e3e3;
     }
-
     &-form {
       .flex(center, space-around, row);
       .margin(35px, t);
@@ -326,22 +281,18 @@
 
   &-detail {
     background-color: #f2f2f2;
-
     &-cover {
       width: 100%;
       height: 388px;
       background-color: #ffffff;
       .flex(center, center);
-
       &-empty {
         width: 200px;
         height: 200px;
       }
-
       &-image {
         width: 100%;
         height: 100%;
-
         &-background {
           background-repeat: no-repeat;
           background-size: contain;
@@ -349,58 +300,48 @@
         }
       }
     }
-
     &-list {
       width: 100%;
       .padding(30px, lr);
       .padding(6rpx, t);
     }
-
     &-textarea {
       width: 450rpx;
     }
-
     &-submit {
       width: 100%;
     }
-
     &-modal {
       position: relative;
       display: flex;
       flex-direction: column;
       flex: 1;
-
       &-tip {
         .margin(28px, b);
         font-size: 26px;
         color: #666666;
         .padding(10px, l);
       }
-
       &-text {
         font-size: 26px;
         color: @base-font-color;
         .margin(26px, b);
       }
-
       &-close {
         position: absolute;
         left: 60px;
         top: 50px;
         width: 24px;
         height: 24px;
-
         &-image {
           width: 100%;
           height: 100%;
         }
       }
-
       &-change {
         position: absolute;
         right: 47px;
         top: 50px;
-
         &-text {
           background-color: @theme-color;
           color: #ffffff;
@@ -412,32 +353,27 @@
       }
     }
   }
-
   &-add {
     .padding(200px, b);
-
     &-buttons {
       position: fixed;
       bottom: 0;
       left: 0;
       right: 0;
       z-index: 100;
-      border-top: 1px solid rgba(227, 227, 227, 1);
+      border-top: 1px solid rgba(227,227,227,1);
       background-color: #fff;
       .padding(40px, t);
       .padding(50px, b);
       .padding(30px, lr);
       .flex(center, space-between, row);
-
       &-button {
         width: 320px;
       }
-
       &-one {
         width: 100%;
       }
     }
-
     &-more {
       display: flex;
       flex-direction: row;
@@ -446,7 +382,6 @@
       color: #333333;
       .margin(38px, tb);
       .padding(36px, lr);
-
       &-image {
         width: 24px;
         height: 13px;
@@ -454,13 +389,11 @@
       }
     }
   }
-
   &-manage {
     &-list {
       position: absolute;
       top: @product-header-height;
       width: 100%;
-
       &-container {
         display: flex;
         flex-direction: column;
@@ -468,41 +401,35 @@
       }
     }
   }
-
+  
   &-pay {
     height: 100%;
     background-color: #f2f2f2;
     .padding(20px, tb);
     .padding(6px, t);
-
     &-card {
       .margin(20px, t);
     }
-
     &-container {
       .padding(@cart-height + 50px, b);
     }
-
     &-pos {
       .padding(30px, lr);
       .margin(6px, t);
       background-color: #f2f2f2;
     }
-
     &-list {
       .padding(20px);
       // display: flex;
       // flex: 1;
       // .padding(30px, lr);
     }
-
     &-footer {
       position: fixed;
       bottom: 0;
       left: 0;
       right: 0;
       z-index: 999;
-
       &-bg {
         position: relative;
         .padding(@product-pay-footer-right, r);
@@ -510,7 +437,6 @@
         height: @cart-height;
         .background-image('//net.huanmusic.com/weapp/bmg_bottom_close.png');
       }
-
       &-right {
         font-weight: bold;
         position: absolute;
@@ -521,37 +447,30 @@
         .flex(center, center, column);
         color: #ffffff;
         font-size: @cart-button-font;
-
         &-disabled {
           .background-image('//net.huanmusic.com/weapp/bt_put_bottom_close_und.png');
         }
-
         &-active {
           .background-image('//net.huanmusic.com/weapp/bt_put_bottom_close_pitch.png');
         }
       }
-
       &-left {
         display: flex;
         flex-direction: row;
         align-items: center;
         height: 100%;
         .padding(50px, lr);
-
         &-item {
           .flex(center, center, column);
           flex: 1;
-
           &-icon {
             width: 37px;
             height: 32px;
           }
-
           &-erase {
             width: 32px;
             height: 34px;
           }
-
           &-font {
             font-size: 26px;
             color: #ffffff;
@@ -560,38 +479,31 @@
         }
       }
     }
-
     &-member {
       &-input {
         .padding(30px);
         .flex(center, space-between, row);
         background-color: #F8F8FA;
         border-radius: 20px;
-
         &-icon {
           width: 40px;
           height: 40px;
-
           &-img {
             width: 100%;
             height: 100%;
           }
         }
-
         &-place {
           font-size: 30px;
           color: #cccccc;
         }
-
         &-box {
           width: 100%;
           font-size: 30px;
         }
       }
-
       &-layout {
         z-index: 1200;
-
         &-mask {
           display: flex;
           position: fixed;
@@ -602,7 +514,6 @@
           z-index: 1000;
           background-color: rgba(0, 0, 0, 0.7)
         }
-
         &-box {
           z-index: 1200;
           position: absolute;
@@ -611,27 +522,22 @@
           right: 0;
           background-color: #f2f2f2;
         }
-
         &-container {
           display: flex;
           flex-direction: column;
           align-items: center;
         }
-
         &-card {
           .margin(150px, t);
-
           &-row {
             .padding(24px);
             color: #666666;
             display: flex;
             font-size: 26px;
             flex-direction: column;
-
             &-text {
               .margin(24px, b);
             }
-
             &-icons {
               max-width: 600px !important;
             }
@@ -640,38 +546,31 @@
       }
     }
   }
-
   &-row {
     position: relative;
     .padding(24px, tb);
     .padding(40px, lr);
-
     &-items {
       position: relative;
-
       &::after {
         .border1px;
       }
     }
-
     &-totals {
       display: flex;
       flex-direction: column;
     }
-
     &-box {
       display: flex;
       flex-direction: row;
     }
-
     &-cover {
-      width: 120px;
-      height: 120px;
-      border: 1px solid rgba(229, 229, 229, 1);
-      border-radius: 10px;
+      width:120px;
+      height:120px;
+      border:1px solid rgba(229,229,229,1);
+      border-radius:10px;
       .bg;
     }
-
     &-icon {
       .margin(16px, lr);
       .padding(17px, lr);
@@ -680,42 +579,35 @@
       color: #ffffff;
       font-size: 20px;
       border-radius: 14px;
-
       &-member {
         background-color: #CCAE80;
       }
-
       &-refund {
         background-color: #20BBB9;
       }
     }
-
     &-line {
       text-decoration: line-through;
     }
-
     &-border {
       border-bottom: 1PX solid #e3e3e3;
     }
-
     &-normal {
       font-size: 28px;
       color: @base-font-color;
     }
-
     &-name {
       font-size: 30px;
-      width: 464px;
+      width: 494px;
       display: -webkit-box;
       overflow: hidden;
       text-overflow: ellipsis;
       line-clamp: 1;
       -webkit-line-clamp: 1;
       -webkit-box-orient: vertical;
-      font-weight: 500;
-      color: rgba(51, 51, 51, 1);
+      font-weight:500;
+      color:rgba(51,51,51,1);
     }
-
     &-corner {
       position: absolute;
       bottom: 0;
@@ -723,161 +615,82 @@
       display: flex;
       flex-direction: column;
       align-items: flex-end;
-
       &-origin {
-        font-size: 18px;
-        font-weight: 500;
-        text-decoration: line-through;
-        color: rgba(179, 179, 179, 1);
+        font-size:18px;
+        font-weight:500;
+        text-decoration:line-through;
+        color:rgba(179,179,179,1);
       }
-
       &-pirce {
-        font-size: 24px;
-        font-weight: bold;
-        color: rgba(51, 51, 51, 1);
+        font-size:24px;
+        font-weight:bold;
+        color:rgba(51,51,51,1);
       }
     }
-
+    
     &-bold {
       font-weight: bold;
     }
-
     &-price {
       font-size: 28px;
       color: #fc4e44;
     }
-
-    &-discount {
-      width: 56px;
-      height: 26px;
-      .flex(center, center, row);
-      font-size: 20px;
-
-      &-title {
-        color: #333333;
-        font-size: 24px;
-        margin-left: 20px;
-      }
-
-      &-full {
-        background-color: #FFEBEB;
-        color: #FC4E44;
-      }
-
-      &-first {
-        background-color: #FFF0E2;
-        color: #FF893B;
-      }
-    }
-
-    &-voucher {
-      color: #333333;
-      font-size: 30px;
-    }
-
-    &-total {
-      color: #333333;
-      font-size: 24px;
-    }
-
     &-content {
       display: flex;
       flex-direction: column;
       flex: 1;
       position: relative;
-
       &-box {
         justify-content: space-between;
         .margin(20px, l);
         position: relative;
       }
-
       &-item {
         .flex(center, space-between, row);
         .padding(30px, lr);
         .padding(35px, tb);
-        border-top: #E3E3E3 1px solid;
       }
-
-      &-price {
-        color: #FC4E44;
-        font-size: 30px;
-
-        &-black {
-          color: #333333;
-        }
-      }
-
-      &-column {
-        .flex(center, center, column);
-
-        &-item {
-          width: 100%;
-          height: 100%;
-          .flex(center, space-between, row);
-        }
-      }
-
-      &-row {
-        .flex(center, center, row);
-
-        &-top {
-          margin-bottom: 22px;
-        }
-      }
-
       &-items {
         .flex(center, center, row);
       }
-
       &-top {
         .margin(20px, t);
       }
     }
-
     &-stock {
       display: flex;
       flex-direction: column;
-
       &-mar {
         .margin(20px, t);
       }
-
       &-item {
         display: flex;
         flex-direction: row;
-
         &-detail {
           display: flex;
           flex: 1;
           align-items: flex-end;
         }
-
         &-name {
           font-size: 24px;
           color: #999999;
         }
-
         &-red {
           color: #FC4E44 !important;
         }
-
         &-base {
           font-size: 28px;
         }
-
         &-value {
           font-size: 28px;
           color: #4d4d4d;
         }
-
         &-bold {
           font-weight: bold;
         }
       }
     }
   }
-
   &-refund {
     &-input {
       width: 710px !important;
