--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -229,5 +229,33 @@
     }
   }
 
-
+  &-remark {
+    background-color: #fff;
+    .padding(30px);
+    &-input {
+      width:690px;
+      height:350px;
+      background:rgba(247,247,247,1);
+      border:1px solid rgba(153,153,153,1);
+      border-radius:10px;
+      position: relative;
+    }
+    &-title {
+      font-size:28px;
+      font-weight:500;
+      color:rgba(153,153,153,1);
+      .margin(30px, tb);
+    }
+    &-button {
+      .padding(36px, lr);
+      height: 60px;
+      .flex(center, center, row);
+      border:1px solid rgba(153,153,153,1);
+      border-radius:20px;
+      font-size:28px;
+      font-weight:500;
+      color:rgba(128,128,128,1);
+      line-height: 60px;
+    }
+  }
 }
