--- a/src/component/address/index.less
+++ b/src/component/address/index.less
@@ -48,6 +48,10 @@
       display: flex;
       flex-direction: row;
       .margin(18px, t);
+      &-bot {
+        .margin(0px, t) !important;
+        .margin(18px, b);
+      }
       &-text {
         font-size:26px;
         font-weight:500;
