--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -235,16 +235,26 @@
     &-input {
       width:690px;
       height:350px;
+      .padding(30px);
       background:rgba(247,247,247,1);
       border:1px solid rgba(153,153,153,1);
       border-radius:10px;
       position: relative;
+      &-text {
+        width: 100%;
+        height: 100%;
+      }
     }
     &-title {
       font-size:28px;
       font-weight:500;
       color:rgba(153,153,153,1);
       .margin(30px, tb);
+    }
+    &-buttons {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
     }
     &-button {
       .padding(36px, lr);
@@ -256,6 +266,11 @@
       font-weight:500;
       color:rgba(128,128,128,1);
       line-height: 60px;
+      .margin(20px, b);
+      .margin(16px, r);
+    }
+    &-box {
+      .margin(50px, t);
     }
   }
 }
