我的及下单加入登录modal

--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -17,6 +17,7 @@
     .padding(30px, lr);
     height: 100%;
     width: 100%;
+    background-color: #F2F2F2;
   }
 
   &-user {
@@ -26,6 +27,7 @@
     // .margin(46px, t);
     width: 100%;
     margin-bottom: 63px;
+    background-color: transparent;
 
     &-image {
       width: 140px;
@@ -56,7 +58,6 @@
     &-phone {
       font-size: 30px;
       color: #ffffff;
-      margin-top: 24px;
     }
   }
 
