--- a/src/component/address/index.less
+++ b/src/component/address/index.less
@@ -67,6 +67,16 @@
       font-weight:500;
       color:rgba(252,146,42,1);
       .margin(10px, r);
+
+      &-1 {
+        background:#E1EEFF;
+        color: #3EBD4D
+      }
+
+      &-2 {
+        background: #E2F7ED;
+        color:#2A86FC
+      }
     }
     &-edit {
       position: absolute;
