--- a/src/component/empty/index.less
+++ b/src/component/empty/index.less
@@ -13,6 +13,10 @@
     height: 388px;
     .bg;
     position: relative;
+    &-index {
+      width: 453px !important;
+      height: 313px !important;
+    }
   }
   &-text {
     position: absolute;
