--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -129,7 +129,8 @@
     }
 
     &-left {
-      width: 150px;
+      width: 162px;
+      height: 100%;
       display: flex;
       flex-direction: column;
       background-color: @product-list-left-bg-color;
