--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -244,6 +244,14 @@
         width: 100%;
         height: 100%;
       }
+      &-corner {
+        position: absolute;
+        right: 28px;
+        bottom: 23px;
+        font-size:24px;
+        font-weight:500;
+        color:rgba(153,153,153,1);
+      }
     }
     &-title {
       font-size:28px;
