--- a/src/component/tabs/tabs.switch.less
+++ b/src/component/tabs/tabs.switch.less
@@ -26,6 +26,7 @@
       background-color: #FC4E44;
       border-radius: 18px;
       color: #fff;
+      font-size: 22px;
     }
 
     &-content {
