--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -143,6 +143,7 @@
           &-img {
             width: 50px;
             height: 50px;
+            margin-top: 10px;
           }
 
           &-info {
@@ -201,6 +202,7 @@
       }
 
       &-order {
+        margin-bottom: 40px;
         &-item {
           width: 100%;
           display: flex;
@@ -243,14 +245,6 @@
       &-text {
         width: 100%;
         height: 100%;
-      }
-      &-corner {
-        position: absolute;
-        right: 28px;
-        bottom: 23px;
-        font-size:24px;
-        font-weight:500;
-        color:rgba(153,153,153,1);
       }
     }
     &-title {
